--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: Writings
+title: Khallil's Blog
+title-text: Hi, I'm <span class="highlight-text">Khallil.</span> I like to make <span class="highlight-text">websites</span> and am currently doing so at <span class="highlight-text">Apple.</span> You can get to know me on <span class="highlight-text"><a href="http://www.twitter.com/kmx411">Twitter</a></span>, or enjoy the blog posts below.
 ---
 
 <div class="content">
