--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Khallil's Blog
-title-text: Hi, I'm <a href="/resume.html"> <span class="highlight-text">Khallil.</span></a> I like to make <a href="/work.html"><span class="highlight-text">websites</span></a> and am currently doing so at <span class="highlight-text">Apple.</span> You can get to know me on <a href="http://www.twitter.com/kmx411"><span class="highlight-text">Twitter</span></a>, or enjoy the blog posts below.
+title-text: Hi, I'm <a href="/resume.html"> <span class="highlight-text">Khallil.</span></a> I like to make <a href="/work.html"><span class="highlight-text">websites</span></a>. You can get to know me on <a href="http://www.twitter.com/kmx411"><span class="highlight-text">Twitter</span></a>, or enjoy the blog posts below.
 ---
 
 <div class="content">
